Use URI.create(...) rather than new URI(...)